--- a/httpd/build.gradle
+++ b/httpd/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 25
         versionCode 100
-        versionName "1.0.0"
+        versionName "1.0.0-Alpha"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
