--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,7 @@ allprojects {
         jcenter()
     }
 }
+dependencies {
+//    compile 'com.android.support:appcompat-v7:25.+'
+//    testCompile 'junit:junit:4.12'
+}
