--- a/dualtouch/src/main/AndroidManifest.xml
+++ b/dualtouch/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dualtouch"
+    package="com.cynoware.posmate.dualtouch"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,9 +14,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:largeHeap="true"
-        android:name="com.example.dualtouch.DualApplication" >
+        android:name=".DualApplication" >
         <activity
-            android:name="com.example.dualtouch.MainScreen"
+            android:name=".MainScreen"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
