--- a/httpd/build.gradle
+++ b/httpd/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.cereslink.poshttpserver"
-        minSdkVersion 22
+        applicationId "com.cynoware.posmate.httpd"
+        minSdkVersion 18
         targetSdkVersion 25
-        versionCode 100
-        versionName "1.0.0-Alpha"
+        versionCode 101
+        versionName "1.1.0-Alpha"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -20,14 +20,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
+
+
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/netty-all-4.1.6.Final.jar')
     compile project(':sdk')
