--- a/web_app/build.gradle
+++ b/web_app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 22
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "com.cynoware.posmate.dualtouch"
-        minSdkVersion 18
-        targetSdkVersion 25
+        applicationId "com.cynoware.web_app"
+        minSdkVersion 22
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
 
@@ -23,10 +23,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+//    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
