--- a/web_app/build.gradle
+++ b/web_app/build.gradle
@@ -1,6 +1,20 @@
 apply plugin: 'com.android.application'
 
+def releaseTime() {
+    return new Date().format("yyyy-MM-dd", TimeZone.getTimeZone("UTC"))
+}
+
 android {
+
+    signingConfigs {
+        releaseBill {
+            keyAlias 'cynoware'
+            keyPassword '<o6ubEi7'
+            storeFile file('../cynoware.jks')
+            storePassword '<o6ubEi7'
+        }
+    }
+
     compileSdkVersion 22
     buildToolsVersion "25.0.3"
 
@@ -10,16 +24,62 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        releaseWebApps {
+
+            //是否进行zipalign优化
+            zipAlignEnabled true
+            signingConfig signingConfigs.releaseBill
+
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        // 输出apk名称为cyno_v1.0_2015-01-15_billing.apk
+                        def fileName = "cyno_v${defaultConfig.versionName}_${releaseTime()}_${variant.productFlavors[0].name}.apk"
+                        output.outputFile = new File(outputFile.parent, fileName)
+                    }
+                }
+            }
+        }
+
+
     }
+
+    //配置多渠道
+//    productFlavors{
+//        billing {}
+//        collectapp {}
+//        face{}
+//    }
+//    productFlavors.all {
+//        flavor -> flavor.manifestPlaceholders = [CYNO_CHANNEL_VALUE: name]
+//    }
+
+    productFlavors {
+        billing {
+            applicationId "com.cynowate.webapp.billing"
+            manifestPlaceholders = [CYNO_CHANNEL_VALUE: "billing"]
+        }
+        collectapp {
+            applicationId "com.cynowate.webapp.collect"
+            manifestPlaceholders = [CYNO_CHANNEL_VALUE: "collectapp"]
+        }
+        face {
+            applicationId "com.cynowate.webapp.face"
+            manifestPlaceholders = [CYNO_CHANNEL_VALUE: "face"]
+        }
+    }
+
 }
 
 dependencies {
