--- a/web_app/src/billing/AndroidManifest.xml
+++ b/web_app/src/billing/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.cynoware.webapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,6 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:name="AppApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -32,7 +31,8 @@
         <activity
             android:name=".SplashActivity"
             android:configChanges="orientation"
-            android:screenOrientation="landscape">
+            android:screenOrientation="portrait"
+            tools:node="replace">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,7 +44,8 @@
         <activity
             android:name=".WebViewActivity"
             android:configChanges="orientation"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="portrait"
+            tools:node="replace"/>
 
         <receiver android:name=".BootBroadcastReceiver" >
             <intent-filter>
