--- a/web_app/src/billing/AndroidManifest.xml
+++ b/web_app/src/billing/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:name=".WebViewActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             tools:node="replace"/>
 
         <receiver android:name=".BootBroadcastReceiver" >
