--- a/web_app/src/collectapp/AndroidManifest.xml
+++ b/web_app/src/collectapp/AndroidManifest.xml
@@ -42,8 +42,20 @@
 
 
         <activity
+            android:name=".PrintConfigActivity"
+            android:label="打印配置"
+            android:icon="@drawable/ic_launcher"
+            android:configChanges="orientation"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".WebViewActivity"
             android:configChanges="orientation"
+            android:launchMode="singleTask"
             android:screenOrientation="landscape"
             tools:node="replace"/>
 
