--- a/web_app/src/billing/AndroidManifest.xml
+++ b/web_app/src/billing/AndroidManifest.xml
@@ -42,6 +42,13 @@
 
 
         <activity
+            android:name=".PrintConfigActivity"
+
+            tools:node="remove">
+
+        </activity>
+
+        <activity
             android:name=".WebViewActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
